--- a/src/components/Toast.module.css
+++ b/src/components/Toast.module.css
@@ -1,25 +1,31 @@
 .toast {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-  padding: 10px 14px 13px;
-  width: 100%;
-  font-size: 13px;
-  border-radius: 8px;
-  box-shadow:
-    0px 0px 0px 1px rgba(0, 0, 0, 0.08),
-    0px 1px 2px -1px rgba(0, 0, 0, 0.08),
-    0px 2px 4px 0px rgba(0, 0, 0, 0.04);
-  transition: opacity 400ms ease, transform 400ms ease;
-  opacity: 0;
-  transform: translateY(100%);
-}
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    padding: 10px 14px 13px;
+    width: 100%;
+    font-size: 13px;
+    border-radius: 8px;
+    box-shadow:
+        0px 0px 0px 1px rgba(0, 0, 0, 0.08),
+        0px 1px 2px -1px rgba(0, 0, 0, 0.08),
+        0px 2px 4px 0px rgba(0, 0, 0, 0.04);
 
-.toast[data-mounted="true"] {
+    --ease-out-quint: cubic-bezier(0.23,1,0.32,1);
+    transform-origin: bottom;
     opacity: 1;
-    transform: translateY(calc(var(--index) * (100% + var(--gap)) * -1));
+    transform: translateY(calc(var(--index) * (100% + var(--gap)) * -1)) scale(1);
+    transition-duration: 500ms;
+    transition-timing-function: var(--ease-out-quint);
+    transition-property: opacity, transform;
+
+    @starting-style {
+        opacity: 0;
+        transform: translateY(100%) scale(0.25);
+    }
+
 }
 
 .toast p {
