--- a/src/components/Toast.module.css
+++ b/src/components/Toast.module.css
@@ -3,6 +3,7 @@
     bottom: 0;
     display: flex;
     flex-direction: column;
+    background: #ffffff;
     gap: 4px;
     padding: 10px 14px 13px;
     width: 100%;
@@ -24,7 +25,7 @@
 
     @starting-style {
         opacity: 0;
-        transform: translateY(100%) scale(0.25);
+        transform: translateY(100%) scale(0.95);
     }
 
 }
